tests/ui/traits/issue-105231.stderr
error: type parameter `T` is only used recursively
  --> $DIR/issue-105231.rs:1:15
   |
LL | struct A<T>(B<T>);
   |          -    ^
   |          |
   |          type parameter must be used non-recursively in the definition
   |
   = help: consider removing `T`, referring to it in a field, or using a marker such as `PhantomData`
   = note: all type parameters must be used in a non-recursive way in order to constrain their variance

error[E0072]: recursive types `A` and `B` have infinite size
  --> $DIR/issue-105231.rs:1:1
   |
LL | struct A<T>(B<T>);
   | ^^^^^^^^^^^ ---- recursive without indirection
...
LL | struct B<T>(A<A<T>>);
   | ^^^^^^^^^^^ ------- recursive without indirection
   |
help: insert some indirection (e.g., a `Box`, `Rc`, or `&`) to break the cycle
   |
LL ~ struct A<T>(Box<B<T>>);
LL |
LL |
LL ~ struct B<T>(Box<A<A<T>>>);
   |

error: type parameter `T` is only used recursively
  --> $DIR/issue-105231.rs:4:17
   |
LL | struct B<T>(A<A<T>>);
   |          -      ^
   |          |
   |          type parameter must be used non-recursively in the definition
   |
   = help: consider removing `T`, referring to it in a field, or using a marker such as `PhantomData`
   = note: all type parameters must be used in a non-recursive way in order to constrain their variance

error: aborting due to 3 previous errors

For more information about this error, try `rustc --explain E0072`.
